Team & Counter Section Complete

--- a/index.html
+++ b/index.html
@@ -179,33 +179,99 @@
 
     <section class="counter-area">
         <div class="container-fluid">
+            <div class="row  no-padding">
+                <div class="col-xl-3">
+                    <div class="single-counter">
+                        <i class="fas fa-laptop"></i>
+                        <div class="single-content">
+                            <span>123</span>
+                            <h4>Cup of Coffees</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3">
+                    <div class="single-counter">
+                        <i class="fas fa-laptop"></i>
+                        <div class="single-content">
+                            <span>123</span>
+                            <h4>Cup of Coffees</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3">
+                    <div class="single-counter">
+                        <i class="fas fa-laptop"></i>
+                        <div class="single-content">
+                            <span>123</span>
+                            <h4>Cup of Coffees</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3">
+                    <div class="single-counter">
+                        <i class="fas fa-laptop"></i>
+                        <div class="single-content">
+                            <span>123</span>
+                            <h4>Cup of Coffees</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="team-area pt-100 pb-100">
+        <div class="container">
+            <div class="row section-title">
+                <div class="col-xl-6 text-right">
+                    <span>who we are?</span>
+                    <h2> our team</h2>
+                </div>
+                <div class="col-xl-6">
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry typesetting industry.</p>
+                </div>
+            </div>
             <div class="row">
-                <div class="col-xl-3">
-                    <div class="single-counter">
-                        <i class="fas fa-laptop"></i>
-                        <span>123</span>
-                        <h4>Cup of Coffees</h4>
+                <div class="col-xl-4">
+                    <div class="single-team">
+                        <img src="assets/images/team/1.jpg" alt="">
+                        <div class="team-overlay">
+                            <h4>John Doe <span>Web Developer</span></h4>
+                            <div class="team-icon">
+                                <a href=""><i class="fas fa-phone-alt"></i></a>
+                                <a href=""><i class="fas fa-phone-alt"></i></a>
+                                <a href=""><i class="fas fa-phone-alt"></i></a>
+                                <a href=""><i class="fas fa-phone-alt"></i></a>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="col-xl-3">
-                    <div class="single-counter">
-                        <i class="fas fa-laptop"></i>
-                        <span>123</span>
-                        <h4>Cup of Coffees</h4>
+                <div class="col-xl-4">
+                    <div class="single-team">
+                        <img src="assets/images/team/2.jpg" alt="">
+                        <div class="team-overlay">
+                            <h4>John Doe <span>Web Developer</span></h4>
+                            <div class="team-icon">
+                                <a href=""><i class="fas fa-phone-alt"></i></a>
+                                <a href=""><i class="fas fa-phone-alt"></i></a>
+                                <a href=""><i class="fas fa-phone-alt"></i></a>
+                                <a href=""><i class="fas fa-phone-alt"></i></a>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="col-xl-3">
-                    <div class="single-counter">
-                        <i class="fas fa-laptop"></i>
-                        <span>123</span>
-                        <h4>Cup of Coffees</h4>
-                    </div>
-                </div>
-                <div class="col-xl-3">
-                    <div class="single-counter">
-                        <i class="fas fa-laptop"></i>
-                        <span>123</span>
-                        <h4>Cup of Coffees</h4>
+                <div class="col-xl-4">
+                    <div class="single-team">
+                        <img src="assets/images/team/3.jpg" alt="">
+                        <div class="team-overlay">
+                            <h4>John Doe <span>Web Developer</span></h4>
+                            <div class="team-icon">
+                                <a href=""><i class="fas fa-phone-alt"></i></a>
+                                <a href=""><i class="fas fa-phone-alt"></i></a>
+                                <a href=""><i class="fas fa-phone-alt"></i></a>
+                                <a href=""><i class="fas fa-phone-alt"></i></a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
