--- a/index.html
+++ b/index.html
@@ -277,5 +277,42 @@
             </div>
         </div>
     </section>
+
+    <section class="testimonials-area bg pt-100 pb-100" style="background-image: url('assets/images/testi_back.jpg')">
+        <div class="container-fluid">
+            <div class="row section-title">
+                <div class="col-xl-6 text-right">
+                    <span>who we are?</span>
+                    <h2> what cleint say</h2>
+                </div>
+                <div class="col-xl-6">
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry typesetting industry.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xl-4">
+                    <div class="single-testimonial">
+                        <img src="assets/images/team/1.jpg" alt="">
+                        <p>" Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda culpa cumque dicta sint soluta voluptas eius iusto modi reprehenderit sint soluta voluptas. "</p>
+                        <h4>John Doe <span>Web Developer</span></h4>
+                    </div>
+                </div>
+                <div class="col-xl-4">
+                    <div class="single-testimonial">
+                        <img src="assets/images/team/2.jpg" alt="">
+                        <p>" Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda culpa cumque dicta sint soluta voluptas eius iusto modi reprehenderit sint soluta voluptas. "</p>
+                        <h4>John Doe <span>Web Developer</span></h4>
+                    </div>
+                </div>
+                <div class="col-xl-4">
+                    <div class="single-testimonial">
+                        <img src="assets/images/team/3.jpg" alt="">
+                        <p>" Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda culpa cumque dicta sint soluta voluptas eius iusto modi reprehenderit sint soluta voluptas. "</p>
+                        <h4>John Doe <span>Web Developer</span></h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
