--- a/index.html
+++ b/index.html
@@ -314,5 +314,143 @@
             </div>
         </div>
     </section>
+
+    <section class="blog-area pt-100 pb-100">
+        <div class="container">
+            <div class="row section-title">
+                <div class="col-xl-6 text-right">
+                    <span>who we are?</span>
+                    <h2> latest news</h2>
+                </div>
+                <div class="col-xl-6">
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry typesetting industry.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xl-4">
+                    <div class="single-blog">
+                        <div class="blog-img">
+                            <img src="assets/images/blog/blog1.jpg" alt="">
+                        </div>
+                        <div class="blog-content">
+                            <h4>Blog Title</h4>
+                            <a href="">24 Nov 2020</a> / 
+                            <a href="">Admin</a>
+                            <p>Lorem ipsum dolor sit amet, consectetur, adipisicing elit. Voluptatem aliquam adipisci quod architecto labore iure quia velit quaerat veniam porro.</p>
+                            <a href="" class="btn-primary">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4">
+                    <div class="single-blog">
+                        <div class="blog-img">
+                            <img src="assets/images/blog/blog1.jpg" alt="">
+                        </div>
+                        <div class="blog-content">
+                            <h4>Blog Title</h4>
+                            <a href="">24 Nov 2020</a> / 
+                            <a href="">Admin</a>
+                            <p>Lorem ipsum dolor sit amet, consectetur, adipisicing elit. Voluptatem aliquam adipisci quod architecto labore iure quia velit quaerat veniam porro.</p>
+                            <a href="" class="btn-primary">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4">
+                    <div class="single-blog">
+                        <div class="blog-img">
+                            <img src="assets/images/blog/blog1.jpg" alt="">
+                        </div>
+                        <div class="blog-content">
+                            <h4>Blog Title</h4>
+                            <a href="">24 Nov 2020</a> / 
+                            <a href="">Admin</a>
+                            <p>Lorem ipsum dolor sit amet, consectetur, adipisicing elit. Voluptatem aliquam adipisci quod architecto labore iure quia velit quaerat veniam porro.</p>
+                            <a href="" class="btn-primary">Read More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="cta-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-6">
+                    <h4>best solution for your business </h4>
+                    <p>the can be used on larger scale projectss as well as small scale projectss</p>
+                </div>
+                <div class="col-xl-6">
+                    <a href="" class="btn-primary">Contact Us</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="footer-area pt-100 pb-100">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-3">
+                    <div class="single-footer">
+                        <h2>halim</h2>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis, ipsa?</p>
+                    </div>
+                </div>
+                <div class="col-xl-2">
+                    <div class="single-footer">
+                        <h4>quick links</h4>
+                        <ul>
+                            <li><a href=""><i class="fas fa-angle-double-right"></i>  Home</a></li>
+                            <li><a href=""><i class="fas fa-angle-double-right"></i> Home</a></li>
+                            <li><a href=""><i class="fas fa-angle-double-right"></i> Home</a></li>
+                            <li><a href=""><i class="fas fa-angle-double-right"></i> Home</a></li>
+                            <li><a href=""><i class="fas fa-angle-double-right"></i> Home</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-xl-4">
+                    <div class="single-footer">
+                        <h4>latest post</h4>
+                        <ul>
+                            <li><a href=""><i class="fas fa-angle-double-right"></i> Home</a></li>
+                            <li><a href=""><i class="fas fa-angle-double-right"></i> Home</a></li>
+                            <li><a href=""><i class="fas fa-angle-double-right"></i> Home</a></li>
+                            <li><a href=""><i class="fas fa-angle-double-right"></i> Home</a></li>
+                            <li><a href=""><i class="fas fa-angle-double-right"></i> Home</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-xl-3">
+                    <div class="single-footer">
+                        <h4>contact us</h4>
+                        <ul>
+                            <li><i class="fas fa-angle-double-right"></i> 245 Street, Sydney, Australia</li>
+                            <li><i class="fas fa-angle-double-right"></i> 245 Street, Sydney, Australia</li>
+                            <li><i class="fas fa-angle-double-right"></i> 245 Street, Sydney, Australia</li>
+                            <li><i class="fas fa-angle-double-right"></i> 245 Street, Sydney, Australia</li>
+                            <li><i class="fas fa-angle-double-right"></i> 245 Street, Sydney, Australia</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="row">
+                <div class="col-xl-6">
+                    <div class="copy">
+                        <p>&copy; 2020</p>
+                    </div>
+                </div>
+                <div class="col-xl-6">
+                    <div class="footer-social">
+                        <a href=""><i class="fas fa-angle-double-right"></i></a>
+                        <a href=""><i class="fas fa-angle-double-right"></i></a>
+                        <a href=""><i class="fas fa-angle-double-right"></i></a>
+                        <a href=""><i class="fas fa-angle-double-right"></i></a>
+                        <a href=""><i class="fas fa-angle-double-right"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
